--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Um Map</title>
+	<title>Love Bomb</title>
 	<style>
 		#out {
 			margin: 2em auto;
-			font-size: 1em;
+			font-size: 1.25em;
 			line-height: 1em;
 			width: 30em;
+
+			/* For Firefox */
+			white-space: pre-wrap;
+			word-break: break-all;
+			/* For Chrome and IE */
+			word-wrap: break-word;
 		}
 	</style>
 </head>
 <body>
 	<div id="out"></div>
 	<div id="debug"></div>
-	<script src="./dest/script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
