Replace center square with heart

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
 		#out {
 			margin: 2em auto;
 			font-size: 1.25em;
-			line-height: 1em;
+			line-height: 0.9em;
 			width: 30em;
+			letter-spacing: 0;
 
 			/* For Firefox */
 			white-space: pre-wrap;
