--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,24 @@
 			/* For Chrome and IE */
 			word-wrap: break-word;
 		}
+
+		.footer {
+			color: #ccc;
+			text-align: center;
+		}
+		.footer a {
+			color: #ccc;
+		}
 	</style>
 </head>
 <body>
 	<div id="out"></div>
 	<div id="debug"></div>
+	<script src="./howler.js"></script>
 	<script src="./script.js"></script>
+	<div class="footer">
+		Made by <a href="https://erty.me">Erty Seidohl</a>
+		using TypeScript, emoji, <a href="http://www.bfxr.net/">bfxr</a>, and love.
+	</div>
 </body>
 </html>
