--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Love Bomb</title>
 	<style>
 		#out {
@@ -36,11 +37,33 @@
 			margin: -1px 0;
 			padding: 0;
 		}
+
+		#warn {
+			display: none;
+			text-align: center;
+		}
+
+		@media screen and (max-width: 600px) {
+			#out {
+				display: none;
+			}
+			#warn {
+				display: block;
+			}
+			.footer {
+				display: none;
+			}
+		}
 	</style>
 </head>
 <body>
+	<div id="warn">
+		<h1>&#128148;</h1>
+		<p>Hey! This game is built for larger screens (600px or larger), and requires a keyboard. (Sorry!)</p>
+	</div>
 	<div id="out"></div>
 	<div id="debug"></div>
+	<p>Hi!</p>
 	<script src="./howler.core.min.js"></script>
 	<script src="./script.js"></script>
 	<div class="footer">
@@ -50,5 +73,15 @@
 		using TypeScript, emoji, <a href="http://www.bfxr.net/">bfxr</a>, and love.<br />
 		Music by <a href="https://soundcloud.com/evan_conway">Evan Conway</a> &#x1F60E;<br />
 	</div>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-81310135-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
